--- a/templates/aulas_previstas/templatetags/tabela_previstas_disciplina_anual.html
+++ b/templates/aulas_previstas/templatetags/tabela_previstas_disciplina_anual.html
@@ -3,13 +3,13 @@
 <table class="table text-center table-bordered table-striped text-nowrap">
     <thead>
     <tr>
-        <th class="border-top" colspan="2" > Carga Semanal</th>
-        <th class="border-top text-center" colspan="4"> Dias de Aula</th>
-        <th class="border-top text-center" colspan="4"> Aulas Previstas</th>
+        <th class="border-top text-center bg-gradient-gray" colspan="2" > Carga Semanal</th>
+        <th class="border-top text-center bg-gradient-gray" colspan="4"> Dias de Aula</th>
+        <th class="border-top text-center bg-gradient-gray" colspan="4"> Aulas Previstas</th>
     </tr>
     <tr>
-        <th class="border-left" > dia da semana</th>
-        <th class="border-right">tempos</th>
+        <th class="border-left " > dia da semana</th>
+        <th class="border-right ">tempos</th>
         <th>1P</th>
         <th>2P</th>
         <th>3P</th>
