--- a/templates/aulas_previstas/templatetags/tabela_previstas_disciplina_semestral.html
+++ b/templates/aulas_previstas/templatetags/tabela_previstas_disciplina_semestral.html
@@ -3,9 +3,9 @@
 <table class="table text-center table-bordered table-striped text-nowrap">
     <thead>
     <tr>
-        <th class="border-top" colspan="2" > Carga Semanal</th>
-        <th class="border-top text-center" colspan="3"> Dias de Aula</th>
-        <th class="border-top text-center" colspan="3"> Aulas Previstas</th>
+        <th class="border-top text-center bg-gradient-gray" colspan="2" > Carga Semanal</th>
+        <th class="border-top text-center bg-gradient-gray" colspan="3"> Dias de Aula</th>
+        <th class="border-top text-center bg-gradient-gray" colspan="3"> Aulas Previstas</th>
     </tr>
     <tr>
         <th class="border-left" > dia da semana</th>
